# cppbach

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cppbach  intro  test.mid
compositions/: prelude in C minor.mid  scherzo no. 1.mid  test.mid
src/: main.cpp  melody.cpp  note.h  twelvetone.cpp  twelvetone.h
